fixed spacing and updated extracurricular descriptions

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ h1 {
 
 .exp-1{
   padding-right: 150px;
-  padding-bottom: 275px;
+  padding-bottom: 200px;
 }
 
 .sidepic-2 {
@@ -106,7 +106,7 @@ h1 {
 .exp-2{
   padding-left: 150px;
   padding-right: 650px;
-  padding-bottom: 225px;
+  padding-bottom: 200px;
 }
 
 .center {
